syntax = "proto3";

package protos.steps;

option go_package = "github.com/streamdal/snitch-protos/build/go/protos/steps";

enum HttpRequestMethod {
  HTTP_REQUEST_METHOD_UNSET = 0;
  HTTP_REQUEST_METHOD_GET = 1;
  HTTP_REQUEST_METHOD_POST = 2;
  HTTP_REQUEST_METHOD_PUT = 3;
  HTTP_REQUEST_METHOD_DELETE = 4;
}

message HttpRequest {
  HttpRequestMethod method = 1;
  string url = 2;
  bytes body = 3;
  map<string,string> headers = 4;
}

message HttpResponse {
  int32 code = 1;
  bytes body = 2;
  map<string,string> headers = 3;
}

message HttpRequestStep {
  HttpRequest request = 1;
}